--- a/src/style.css
+++ b/src/style.css
@@ -26,8 +26,8 @@
     font-weight: bold;
 }
 
-.ui.button {
-    margin: 0 0.25em 0 0;
-    padding: 0.78571429em 1.5em 0.78571429em;
-    border-radius: 0;
-}
+/*.ui.button {*/
+/*    margin: 0 0.25em 0 0;*/
+/*    padding: 0.78571429em 1.5em 0.78571429em;*/
+/*    border-radius: 0;*/
+/*}*/
